fixed issue with navbar collapse not expanding; refactored school_districts method

--- a/app/assets/stylesheets/my_style.css
+++ b/app/assets/stylesheets/my_style.css
@@ -275,31 +275,10 @@ fieldset, legend {
 
 @media (min-width: 768px) and (max-width: 780px), only screen and (min-device-width: 768px) and (max-device-width: 780px) {
     .nav li {
-      font-size:65%;
+      font-size:49%;
     }
-    .navbar-header {
-        float: none;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin: 7.5px -15px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
+    #usernameLink {
+      font-size:70%;
     }
 }
 
